--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,9 +31,19 @@
           </ul>
         </div>
       </nav>
-      <a class="userlogo" href="">
-        <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="clickable image">
-      </a>
+      <div>
+        <a href="../profile">My profile  </a> 
+        <a class="userlogo" href="../profile">
+          <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="clickable image">
+        </a>
+        <form action="/logout" method="post">
+          <button>Logout</button>
+        </form>
+      
+      </div>
+      
+      
+      
     </header>
   </div>
  
