--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -7,8 +7,8 @@
 </head>
 <%- include('partials/header'); -%>
 <div class="main container">
-    <h1>Create Job</h1>
-    <form class="signup" action="">
+    <h1>Register</h1>
+    <form class="signup" action="/signup" method="post">
         <label for="firstname">Firstname</label>
         <input name="firstname" id="firstname" type="text">
         <label for="lastname">Lastname</label>
