--- a/public/dashboard.scss
+++ b/public/dashboard.scss
@@ -109,9 +109,65 @@ body{
                     top: -10px;
                     right: -10px;
                     z-index: 3;
+                    p{
+                        color: red;
+                    }
+                }
+                h2{
+                    color: white;
+                    font-size: 14px;
+                }
+                p{
+                    color: wheat;
+                    font-size: 14px;
+                }
+                form{
+                    a{
+                        color: blue;
+                    }
+                    input{
+                        display: none;
+                    }
                 }
             }
         }
+    }
+    .modal-seemore {
+        background-color: darkgray;
+        position: fixed;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        padding: 10px;
+        border-radius: 25%;
+        border-top-right-radius: 0px;
+        width: 300px;
+        height: 400px;
+    
+        .modal-content{
+            background-color: gray;
+            padding: 10px;
+
+            .modal-header{
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+
+            }
+            .modal-body{
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                gap: 10px;
+            }
+        }
+    }
+    .modal-seemore::backdrop{
+        background: rgba(0,0,0,0.3);
+        backdrop-filter: blur(5px);
+ 
     }   
 }
 
