--- a/public/profile.scss
+++ b/public/profile.scss
@@ -7,6 +7,7 @@ a{
     text-decoration: none;
 }
 .btn{
+    border: 1px solid black;
     border-radius: 25px;
     padding: 4px;
     background-color: red;
@@ -113,11 +114,56 @@ body{
 
                         }
                         .upload{
-
+                            input{
+                                display: none;
+                            }
                         }
                 }
                 .modify{
+                    .password-change {
+                        border: 3px solid black;
+                        padding: 10px;
+                        border-radius: 25%;
+                        border-top-right-radius: 0%;
+                        background-color: gray;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
 
+                        div {
+                            position: relative;
+                            text-align: right; 
+
+                            a {
+                                position: relative;
+                                top: 0%;
+                                right: 0%;
+                                background-color: red;
+                                color: white;
+                                padding: 3px;
+                                text-align: right;
+                                border: 1px solid black;
+                            }
+                        }
+
+                        .updatepassword {
+                            display: flex;
+                            flex-direction: column;
+                            align-items: center;
+                            justify-content: center;
+                            gap: 5px;
+                            input{
+                                font-size: 24px;
+                                border-radius: 25px;
+                                border: 1px solid black;
+                            }
+                        }
+                    }
+                    .password-change::backdrop{
+                        background: rgb(0,0,0,0.8);
+                        
+                    }
                 }
             }
         }
