--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,7 +40,7 @@
 </body>
 <script>
     document.querySelector(".test").addEventListener("click",(ev)=>{
-        ev.preventDefault();
+        //ev.preventDefault();
         /* let firstname = document.querySelector("#firstname").value;
         let lastname = document.querySelector("#lastname").value;
         let email = document.querySelector("#email").value;
