--- a/views/jobcreation.ejs
+++ b/views/jobcreation.ejs
@@ -17,7 +17,9 @@
             <input id="website" type="text" name="website">
             <h2>Employers contact</h2>
             <label for="company_name" >Company name</label>
-            <input id="company_name" type="text" name="company_name">           
+            <input id="company_name" type="text" name="company_name">
+            <label for="contact_name">Name of the contact</label>
+            <input id="contact_name" type="text" name="contact_name">           
             <label for="contact_email">Contact Email</label>
             <input id="contact_email" type="email" name="email">
             <label for="phone">Phone</label>
