remove the navbar

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,7 @@
           </dialog>
 
         </div>
-        <div class="user-menu-big">
+        <!-- <div class="user-menu-big">
           <ul class="user-menu-big-list">
             <li><a href="">Home</a></li>
             <li><a href="">Contact</a></li>
@@ -29,7 +29,7 @@
             <li><a href="">Settings</a></li>
             <li><a href="">Help</a></li>
           </ul>
-        </div>
+        </div> -->
       </nav>
       <div>
         <a href="../profile">My profile  </a> 
