--- a/public/job.css
+++ b/public/job.css
@@ -4,6 +4,13 @@
   padding: 0;
 }
 
+.right-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
 a {
   text-decoration: none;
 }
