--- a/public/job.scss
+++ b/public/job.scss
@@ -3,6 +3,12 @@
     box-sizing: border-box;
     padding: 0;
 }
+.right-nav{
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-between;
+    align-items: center;
+}
 a{
     text-decoration: none;
 }
