--- a/public/login.scss
+++ b/public/login.scss
@@ -6,6 +6,12 @@
 a{
     text-decoration: none;
 }
+.right-nav{
+    display: flex;
+    flex-direction: row;    
+    justify-content: space-between;
+    align-items: center;
+}
 input{
     //display: flex;
     width: 200px;
