--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -31,7 +31,7 @@
           </ul>
         </div> -->
       </nav>
-      <div>
+      <div class="right-nav">
         <a href="../profile">My profile  </a> 
         <a class="userlogo" href="../profile">
           <img src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="clickable image">
