bugfix between job & jobupdate

--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -114,6 +114,7 @@ body .main .job_grid .card {
   padding-bottom: 25px;
   width: 150px;
   height: 100px;
+  box-shadow: 2px 4px 1px 1px black;
 }
 body .main .job_grid .card .status {
   height: 20px;
