--- a/public/dashboard.scss
+++ b/public/dashboard.scss
@@ -121,6 +121,7 @@ body{
                 padding-bottom: 25px;
                 width: 150px;
                 height: 100px;
+                box-shadow: 2px 4px 1px 1px black;  
                 .status{
                     height: 20px;
                     width: 60px;
