--- a/views/jobcreation.ejs
+++ b/views/jobcreation.ejs
@@ -45,7 +45,7 @@
             </div>
 
             <label for="comments">Comments</label>
-            <textarea id="comments"></textarea>
+            <textarea id="comments" name="comments"></textarea>
             <button class="form-button" type="submit">Save</button>
     
         </form>
