--- a/public/job.css
+++ b/public/job.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;700&family=Inter&family=Josefin+Sans:wght@300;400&display=swap");
 * {
   margin: 0;
   box-sizing: border-box;
@@ -13,6 +14,10 @@
 
 a {
   text-decoration: none;
+}
+
+p {
+  font-family: "Josefin Sans", sans-serif;
 }
 
 input {
@@ -65,4 +70,50 @@ body .header-container header nav .user-menu-big .user-menu-big-list li {
 }
 body .header-container header nav .user-menu-big .user-menu-big-list li a {
   color: white;
+}
+body .job-creation-container {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  align-items: center;
+  justify-content: center;
+}
+body .job-creation-container .form-div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+body .job-creation-container .form-div form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+  gap: 7px;
+  padding: 25px;
+  max-width: 376px;
+  border: 3px solid wheat;
+  border-radius: 25px;
+  box-shadow: 2px 2px 2px 2px gainsboro;
+}
+body .job-creation-container .form-div form input {
+  width: 50%;
+  height: 30px;
+}
+body .job-creation-container .form-div form textarea {
+  width: 50%;
+  height: 100px;
+}
+body .job-creation-container .form-div form hr {
+  width: 95%;
+}
+body .job-creation-container .form-div form button {
+  color: white;
+  font-size: 20px;
+  border-radius: 25px;
+  padding: 5px;
+  background-color: red;
+}
+body a {
+  text-align: center;
 }/*# sourceMappingURL=job.css.map */
