--- a/public/job.scss
+++ b/public/job.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300;700&family=Inter&family=Josefin+Sans:wght@300;400&display=swap');
 *{
     margin: 0;
     box-sizing: border-box;
@@ -11,6 +12,9 @@
 }
 a{
     text-decoration: none;
+}
+p{
+    font-family: 'Josefin Sans', sans-serif;
 }
 input{
     //display: flex;
@@ -80,4 +84,51 @@ body{
             }
         }
     }
+    .job-creation-container{
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        align-items: center;
+        justify-content: center;
+        .form-div{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            form{
+                display: flex;
+                flex-direction: column;
+                align-items:flex-start;
+                justify-content :space-around;
+                gap: 7px;
+                padding: 25px;
+                max-width: 376px;
+                border: 3px solid wheat;
+                border-radius: 25px;
+                box-shadow: 2px 2px 2px 2px gainsboro ;
+                input{
+                    width: 50%;
+                    height: 30px;
+                }
+                textarea{
+                    width: 50%;
+                    height: 100px;
+                }
+                hr{
+                    width: 95%
+                } 
+                button{
+                   color: white;
+                   font-size: 20px; 
+                   border-radius: 25px;
+                   padding: 5px; 
+                   background-color: red;
+                }
+            }
+        }
+    }
+    a{
+        text-align: center;
+    }
+    
 }
