--- a/views/job.ejs
+++ b/views/job.ejs
@@ -10,20 +10,23 @@
     <a href="/dashboard" >Back to dashboard</a>
     <div class="form-div">
         <form action="/jobupdate/<%=job._id%>" method="get">
-            <h1 class="jobtitle"><%= job.jobtitle %></h1>
+            <h1 class="jobtitle">Job : <%= job.jobtitle %></h1>
+            
             <p class="company_name">Company : <%= job.company_name %></p>
-            <p class="website">Website : </p>
+            <p class="website">Website : <%= job.website %> </p>
             <hr>
             <h2>Contact of the employer</h2>
-            <p>Name : <span><p class="contact_name"></p></span></p>
-            <p class="email">Email : <%= job.email %></p>
+            <p class="contact_name">Contact name : <%= job.contact_name %></p>
+            <p class="email">Contact e-mail : <%= job.email %></p>
             <p class="address">Address : <%= job.address %></p>
             <hr>
-            <h2 class="origin"></h2>
+            <h2 class="origin">Origin</h2>
             <p class="status">Status : <%= job.status %></p>
-            <p class="comments">Comment : <%=job.comments %></p>
-
-            <button>Update</button>
+            <p class="comments">Comments : <%=job.comments %></p>
+            <div>
+                <button>Update</button>
+            </div>
+            
     
         </form>
     </div>
